kubernetes/staging/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-staging-ingress
  namespace: ventic-tv
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/acme-challenge-type: dns01
spec:
  tls:
    - hosts:
      - "nktolmin.ventic.tv"
      secretName: ventic-tv-cert
  rules:
  - host: nktolmin.ventic.tv
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web-staging-external
            port:
              number: 80
